--- a/Session6-9 - SpringBootDemo/pom.xml
+++ b/Session6-9 - SpringBootDemo/pom.xml
@@ -22,19 +22,13 @@
 	    <dependency>
 	      <groupId>org.springframework.boot</groupId>
 	      <artifactId>spring-boot-starter-web</artifactId>
-	      <exclusions>
-	      	<exclusion>
-		      <groupId>org.springframework.boot</groupId>
-		      <artifactId>spring-boot-starter-tomcat</artifactId>
-	      	</exclusion>
-	      </exclusions>
 	    </dependency>
 	    
-	    <dependency>
+	    <!--<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-jetty</artifactId>
 		    <version>3.0.5</version>
-		</dependency>
+		</dependency>-->
 		
 		<dependency>
 		    <groupId>org.projectlombok</groupId>
@@ -44,7 +38,16 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-devtools</artifactId>
-		    </dependency>
+		</dependency>
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>8.0.32</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
