--- a/Session12 - MultipleDatabase/pom.xml
+++ b/Session12 - MultipleDatabase/pom.xml
@@ -9,13 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>hibernateDemo</artifactId>
+	<artifactId>MultipleDatabase</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
-	<name>hibernateDemo</name>
-	<description>Demo project for Hibernate and JPA in Spring Boot</description>
+	<name>MultipleDatabase</name>
+	<description>Demo project for Multiple Database in Spring Boot</description>
 	<properties>
-		<java.version>8</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
